# repo-people

./: .gitignore  CHANGELOG.md  FIELDS.md  README.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: build_test.yml  deploy_pypi.yml  deploy_test_pypi.yml
docs/: README.md  api.rst  conf.py  contributing.rst  index.rst  usage.rst
examples/: README.md  aaindex.json  iso3166-2.json  protpy.json
repo_people/: README.md  __init__.py  export.py  repo_people.py  users.py  utils.py
tests/: README.md  conftest.py  test_export.py  test_repo_people.py  test_users.py
tests/test_output/amckenna41_iso3166-2/: amckenna41_iso3166-2_commit_authors.csv  amckenna41_iso3166-2_dependents.csv  amckenna41_iso3166-2_fork_owners.csv  amckenna41_iso3166-2_issue_authors.csv  pr_authors.csv  stargazers.csv  watchers.csv
