[tool.poetry]
name = "repo-people"
version = "0.1.0"
description = "Collect and export full GitHub user profile data for everyone associated with a repository."
authors = ["AJ McKenna <amckenna41@qub.ac.uk>"]
maintainers = ["AJ McKenna <amckenna41@qub.ac.uk>"]
license = "MIT"
readme = "README.md"
classifiers = [
        "Development Status :: 4 - Beta",
        "Environment :: Console",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        "Intended Audience :: Information Technology",
        "License :: OSI Approved :: MIT License",
        "License :: Free For Educational Use",
        "Natural Language :: English",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",	
        "Programming Language :: Python :: 3.12",	
        "Programming Language :: Python :: Implementation :: PyPy",
        "Programming Language :: Python :: 3 :: Only",
        "Topic :: Scientific/Engineering",
        "Topic :: Scientific/Engineering :: Information Analysis",
        "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["github", "users", "contributors", "stargazers", "watchers", "maintainers", "python", "pypi", "csv", "json", "github-api"]
packages = [{include = "repo_people"}]

[tool.poetry.dependencies]
python = "^3.9"
PyGithub = "^2.0.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
aiohttp = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
python-dotenv = "^1.0.0"

[tool.poetry.urls]
repository = "https://github.com/amckenna41/repo-people"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"